--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ Icon
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+
+.idea
+.settings
+target
+log
+.classpath
+.project
+*.iml
